// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test search filters Should create correct range filter for min and max field 1`] = `
Object {
  "range": Object {
    "salary": Object {
      "gte": 0,
      "lte": 10,
    },
  },
}
`;

exports[`Test search filters Should just create a filter for max when max is provided 1`] = `
Object {
  "range": Object {
    "salary": Object {
      "lte": 10,
    },
  },
}
`;

exports[`Test search filters Should just create a filter for max when max is provided 2`] = `
Object {
  "range": Object {
    "salary": Object {
      "lte": 10,
    },
  },
}
`;

exports[`Test search filters Should just create a filter for min when min is provided 1`] = `
Object {
  "range": Object {
    "salary": Object {
      "gte": 2,
    },
  },
}
`;

exports[`Test search filters Should just create a filter for min when min is provided 2`] = `
Object {
  "range": Object {
    "salary": Object {
      "gte": 2,
    },
  },
}
`;
